--- a/test/reporting_test/bean/etl/render.html
+++ b/test/reporting_test/bean/etl/render.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Awesome-pyecharts</title>
+    <title>Access Log Report</title>
             <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
 
 </head>
 <body>
-    <div id="3ba516b284e2448d8eb87e32988460ef" style="width:900px; height:500px;"></div>
+    <div id="a19b5e11f8bf4eb7956b0d2f785c7411" style="width:900px; height:500px;"></div>
     <script>
-        var chart_3ba516b284e2448d8eb87e32988460ef = echarts.init(
-            document.getElementById('3ba516b284e2448d8eb87e32988460ef'), 'white', {renderer: 'canvas'});
-        var option_3ba516b284e2448d8eb87e32988460ef = {
+        var chart_a19b5e11f8bf4eb7956b0d2f785c7411 = echarts.init(
+            document.getElementById('a19b5e11f8bf4eb7956b0d2f785c7411'), 'white', {renderer: 'canvas'});
+        var option_a19b5e11f8bf4eb7956b0d2f785c7411 = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -41,11 +41,19 @@
     "series": [
         {
             "type": "bar",
-            "name": "Count0",
+            "name": "/api/",
             "data": [
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
                 2,
                 109,
                 108,
+                0.0,
                 5,
                 83,
                 129,
@@ -53,69 +61,125 @@
                 169,
                 147,
                 5,
+                0.0,
                 2,
-                5
+                0.0,
+                5,
+                0.0,
+                0.0
             ],
             "stack": "stack",
             "barCategoryGap": "20%",
             "label": {
-                "show": true,
-                "position": "top",
+                "show": false,
+                "position": "inside",
                 "margin": 8
+            },
+            "rippleEffect": {
+                "show": true,
+                "brushType": "stroke",
+                "scale": 2.5,
+                "period": 4
             }
         },
         {
             "type": "bar",
-            "name": "Count1",
+            "name": "/api/tsevent/",
             "data": [
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
                 16,
                 30,
+                0.0,
+                0.0,
                 83,
                 120,
                 120,
                 120,
                 123,
-                4
+                4,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0
             ],
             "stack": "stack",
             "barCategoryGap": "20%",
             "label": {
-                "show": true,
-                "position": "top",
+                "show": false,
+                "position": "inside",
                 "margin": 8
+            },
+            "rippleEffect": {
+                "show": true,
+                "brushType": "stroke",
+                "scale": 2.5,
+                "period": 4
             }
         },
         {
             "type": "bar",
-            "name": "Count2",
+            "name": "/api/tsda/",
             "data": [
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
                 1,
                 2,
                 2,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
                 6,
                 36,
-                2
+                2,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0,
+                0.0
             ],
             "stack": "stack",
             "barCategoryGap": "20%",
             "label": {
-                "show": true,
-                "position": "top",
+                "show": false,
+                "position": "inside",
                 "margin": 8
+            },
+            "rippleEffect": {
+                "show": true,
+                "brushType": "stroke",
+                "scale": 2.5,
+                "period": 4
             }
         }
     ],
     "legend": [
         {
             "data": [
-                "Count0",
-                "Count1",
-                "Count2"
+                "/api/",
+                "/api/tsevent/",
+                "/api/tsda/"
             ],
             "selected": {
-                "Count0": true,
-                "Count1": true,
-                "Count2": true
+                "/api/": true,
+                "/api/tsevent/": true,
+                "/api/tsda/": true
             },
             "show": true
         }
@@ -134,6 +198,7 @@
     },
     "xAxis": [
         {
+            "name": "Date Time",
             "show": true,
             "scale": false,
             "nameLocation": "end",
@@ -153,9 +218,17 @@
                 }
             },
             "data": [
+                0,
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
                 7,
                 8,
                 9,
+                10,
                 11,
                 12,
                 13,
@@ -163,21 +236,27 @@
                 15,
                 16,
                 17,
+                18,
                 19,
-                21
+                20,
+                21,
+                22,
+                23
             ]
         }
     ],
     "yAxis": [
         {
+            "name": "Count",
             "show": true,
             "scale": false,
-            "nameLocation": "end",
-            "nameGap": 15,
+            "nameLocation": "center",
+            "nameGap": 25,
             "gridIndex": 0,
             "inverse": false,
             "offset": 0,
             "splitNumber": 5,
+            "max": 360,
             "minInterval": 0,
             "splitLine": {
                 "show": false,
@@ -194,9 +273,48 @@
         {
             "text": "Access Log Report"
         }
-    ]
+    ],
+    "toolbox": {
+        "show": true,
+        "orient": "horizontal",
+        "itemSize": 15,
+        "itemGap": 10,
+        "left": "80%",
+        "feature": {
+            "saveAsImage": {
+                "show": true,
+                "title": "save as image",
+                "type": "png"
+            },
+            "restore": {
+                "show": true,
+                "title": "restore"
+            },
+            "dataView": {
+                "show": true,
+                "title": "data view",
+                "readOnly": false
+            },
+            "dataZoom": {
+                "show": true,
+                "title": {
+                    "zoom": "data zoom",
+                    "back": "data zoom restore"
+                }
+            }
+        }
+    },
+    "dataZoom": {
+        "show": true,
+        "type": "slider",
+        "realtime": true,
+        "start": 0,
+        "end": 100,
+        "orient": "horizontal",
+        "zoomLock": false
+    }
 };
-        chart_3ba516b284e2448d8eb87e32988460ef.setOption(option_3ba516b284e2448d8eb87e32988460ef);
+        chart_a19b5e11f8bf4eb7956b0d2f785c7411.setOption(option_a19b5e11f8bf4eb7956b0d2f785c7411);
     </script>
 </body>
 </html>
