kids study and data analysis

--- a/test/reporting_test/service/echarts/base2.html
+++ b/test/reporting_test/service/echarts/base2.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="3ed9a8092a294e379ef73826dd9948d6" style="width:400px; height:400px;"></div>
+    <div id="55f94d33c87449079b1b026855798cca" style="width:400px; height:400px;"></div>
     <script>
-        var chart_3ed9a8092a294e379ef73826dd9948d6 = echarts.init(
-            document.getElementById('3ed9a8092a294e379ef73826dd9948d6'), 'white', {renderer: 'canvas'});
-        var option_3ed9a8092a294e379ef73826dd9948d6 = {
+        var chart_55f94d33c87449079b1b026855798cca = echarts.init(
+            document.getElementById('55f94d33c87449079b1b026855798cca'), 'white', {renderer: 'canvas'});
+        var option_55f94d33c87449079b1b026855798cca = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -40,60 +40,23 @@
     ],
     "series": [
         {
-            "type": "line",
+            "type": "bar",
             "name": "Y axis",
-            "connectNulls": false,
-            "symbolSize": 4,
-            "showSymbol": true,
-            "smooth": false,
-            "step": false,
             "data": [
-                [
-                    1,
-                    6
-                ],
-                [
-                    2,
-                    5
-                ],
-                [
-                    3,
-                    8
-                ],
-                [
-                    4,
-                    4
-                ],
-                [
-                    5,
-                    3
-                ],
-                [
-                    6,
-                    9
-                ],
-                [
-                    7,
-                    3
-                ],
-                [
-                    8,
-                    9
-                ]
+                8,
+                8,
+                1,
+                2,
+                4,
+                9,
+                7,
+                6
             ],
+            "barCategoryGap": "20%",
             "label": {
                 "show": false,
                 "position": "top",
                 "margin": 8
-            },
-            "lineStyle": {
-                "width": 1,
-                "opacity": 1,
-                "curveness": 0,
-                "type": "solid"
-            },
-            "areaStyle": {
-                "opacity": 0
             },
             "rippleEffect": {
                 "show": true,
@@ -128,7 +91,7 @@
     },
     "xAxis": [
         {
-            "type": "value",
+            "type": "category",
             "name": "X",
             "show": true,
             "scale": true,
@@ -228,7 +191,7 @@
         "zoomLock": false
     }
 };
-        chart_3ed9a8092a294e379ef73826dd9948d6.setOption(option_3ed9a8092a294e379ef73826dd9948d6);
+        chart_55f94d33c87449079b1b026855798cca.setOption(option_55f94d33c87449079b1b026855798cca);
     </script>
 </body>
 </html>
